# BE-Final-Project

./: .replit  COMPLETE_SOURCE_CODE.md  INSTALLATION_GUIDE.md  PACKAGE_INFO.md  README.md  app.py  config.py  data_exporter.py  database_manager.py  dependencies.txt  install.bat  install.sh  nlp_processor.py  pyproject.toml  resume_parser.py  run.py  setup.py  simple_run.py  text_extractors.py
